<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/page_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_10"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_grey_200"
            android:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/my_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:elevation="2dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <TextView
                    android:id="@+id/toolbar_title"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:scrollingCache="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/spacing_large"
                android:paddingRight="@dimen/spacing_large">

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">


                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_middle" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/amount"
                            android:textColor="@color/light_blue_400"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="35dp"
                                android:layout_height="35dp"
                                android:baselineAlignBottom="true"
                                android:contentDescription="@string/Rs"
                                android:src="@drawable/ic_rupee" />

                            <View
                                android:layout_width="@dimen/spacing_medium"
                                android:layout_height="0dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_0_0"
                                android:id="@+id/text_amount"
                                android:textColor="@color/light_blue_500"
                                android:textSize="35sp"
                                android:textStyle="bold"
                                app:fontFamily="sans-serif-medium" />
                        </LinearLayout>

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_middle" />

                        <View
                            android:layout_width="0dp"
                            android:layout_height="@dimen/spacing_mxlarge" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_middle"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:gravity="center"
                    android:text="@string/start_earning"
                    android:textColor="@color/grey_800"
                    android:textSize="15sp"
                    android:id="@+id/start_earning"
                    app:fontFamily="sans-serif-medium" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/spacing_large"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="2dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/spacing_small"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:padding="@dimen/spacing_small"
                                android:layout_gravity="center_vertical"
                                android:src="@drawable/ic_baseline_slow_motion_video_24"
                                app:tint="@color/light_blue_600" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/spacing_large"
                                android:text="@string/unity_ads"
                                android:textColor="@color/grey_800"
                                android:textSize="18sp" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/button_watch_unity_ad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="4dp"
                            android:background="@drawable/my_button"
                            android:text="@string/watch"
                            android:textColor="@android:color/white" />

                    </RelativeLayout>

                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_small" />

                <!--                <androidx.cardview.widget.CardView-->
                <!--                    android:layout_width="match_parent"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:padding="@dimen/spacing_large"-->
                <!--                    app:cardBackgroundColor="@android:color/white"-->
                <!--                    app:cardCornerRadius="5dp"-->
                <!--                    app:cardElevation="2dp"-->
                <!--                    app:cardUseCompatPadding="true">-->

                <!--                    <RelativeLayout-->
                <!--                        android:layout_width="match_parent"-->
                <!--                        android:layout_height="wrap_content"-->
                <!--                        android:orientation="horizontal">-->

                <!--                        <LinearLayout-->
                <!--                            android:layout_width="wrap_content"-->
                <!--                            android:layout_height="wrap_content"-->
                <!--                            android:orientation="horizontal">-->

                <!--                            <ImageView-->
                <!--                                android:layout_width="40dp"-->
                <!--                                android:layout_height="40dp"-->
                <!--                                android:padding="@dimen/spacing_small"-->
                <!--                                android:layout_gravity="center_vertical"-->
                <!--                                android:src="@drawable/ic_baseline_slow_motion_video_24"-->
                <!--                                app:tint="@color/light_blue_600" />-->
                <!--                            <TextView-->
                <!--                                android:layout_width="wrap_content"-->
                <!--                                android:layout_height="wrap_content"-->
                <!--                                android:padding="@dimen/spacing_large"-->
                <!--                                android:text="@string/google_ads"-->
                <!--                                android:textColor="@color/grey_800"-->
                <!--                                android:textSize="18sp" />-->
                <!--                        </LinearLayout>-->

                <!--                        <Button-->
                <!--                            android:id="@+id/button_watch_google_ad"-->
                <!--                            android:layout_width="wrap_content"-->
                <!--                            android:layout_height="wrap_content"-->
                <!--                            android:layout_alignParentEnd="true"-->
                <!--                            android:layout_alignParentRight="true"-->
                <!--                            android:layout_marginTop="4dp"-->
                <!--                            android:background="@drawable/my_button"-->
                <!--                            android:text="@string/watch"-->
                <!--                            android:textColor="@android:color/white" />-->

                <!--                    </RelativeLayout>-->

                <!--                </androidx.cardview.widget.CardView>-->
                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xlarge" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/not_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/video_not_lading"
            android:textAlignment="center"
            android:textColor="@color/light_blue_600" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>